update result files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include tbprofiler_web/schema.sql
-graft tbprofiler_web/static
-graft tbprofiler_web/templates
+include tbdr/schema.sql
+graft tbdr/static
+graft tbdr/templates
 global-exclude *.pyc
